--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
             </intent-filter>
         </activity>
 
+
+        <activity android:name=".AddTransactionActivity"/>
         <activity android:name=".MainActivity"/>
+
     </application>
 
 </manifest>
