--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
 
 
         <activity android:name=".AddTransactionActivity"/>
+        <activity android:name=".TransactionDetailActivity"/>
         <activity android:name=".MainActivity"/>
 
     </application>
