--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".AddTransactionActivity"/>
         <activity android:name=".TransactionDetailActivity"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".HistoryActivity" />
+
 
     </application>
 
