--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
         <activity android:name=".AddTransactionActivity"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".HistoryActivity"/>
 
     </application>
 
