--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".AddTransactionActivity"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".HistoryActivity"/>
+        <activity android:name=".TransactionDetailActivity"/>
 
     </application>
 
