--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,13 @@
             </intent-filter>
         </activity>
 
-
         <activity android:name=".AddTransactionActivity"/>
+        <activity android:name=".TransactionDetailActivity"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".HistoryActivity"/>
-        <activity android:name=".TransactionDetailActivity"/>
+        <activity android:name=".StatisticsActivity"/>
+        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".WalletActivity"/>
 
     </application>
 
